# FelpsBot-Timeout

./: .gitignore  README.md  configs.py  configs.py.exemple  keys.py.exemple  main.py  pyproject.toml  requirements.txt  temp.py
models/: commands.py  db.py  embeds.py  timeout.py  timer.py
tests/: conftest.py  test_timeout.py  twitch_tests.py
utils/: generic.py  time.py
